kubernetes/infrastructure/auth/authelia/authelia/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/description: SSO
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Auth
    gethomepage.dev/icon: authelia.png
    gethomepage.dev/name: Authelia
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
  name: authelia
spec:
  hostnames:
    - authelia.costanza.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: authelia
          namespace: authelia
          port: 80
          weight: 1
